modified bootcamp details and added review form page ui

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,6 @@
 .heading {
   @apply text-center text-4xl font-bold pb-8 text-gray-700 tracking-wider;
 }
+.inputField {
+  @apply shadow-sm px-5 py-3;
+}
