implemented popup on create course click

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 .links {
-  @apply block hover:text-blue-700 w-auto  hover:underline cursor-pointer;
+  @apply block hover:text-blue-700 w-auto focus:text-blue-700 focus:underline  hover:underline cursor-pointer;
 }
 .heading {
   @apply text-center text-4xl font-bold pb-8 text-gray-700 tracking-wider;
